# MCP-Learning

./: README.md
mcp1/: client.py  main.py  pyproject.toml
mcp2/: .env  mcp_client.py  mcp_server.py  pyproject.toml
mcp3/: client.py  main.py  pyproject.toml
mcp4/: client.py  main.py  pyproject.toml
mcp5/: main.py  mcp_server.py  pyproject.toml
mcp6/: .env  README.md  hello_agent.py  main.py  pyproject.toml
mcp7/: main.py  my_secrets.py  pyproject.toml
mcp8/: db_agent.py  db_agent1.py  main.py  main1.py  my_secrets.py  pyproject.toml
mcp9/: agent.py  main.py  pyproject.toml
test_qwen/: main.py  pyproject.toml
